--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina de Alejillo el crack</title>
+    <title>AlejoBeliz probando cosas</title>
     <script src="funciones.js"></script>
 </head>
 <body>
