Agregamos carpeta img y style.css

--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AlejoBeliz probando cosas</title>
+    <link rel="stylesheet" href="style.css">
     <script src="funciones.js"></script>
 </head>
 <body>
-    <h1>Funciones</h1>
-    <p><strong>Te dejo un texto con las funciones para que uses en consola</strong></p>
-    <ul>
-        <li>suma(a,b)</li>
-        <li>resta(a,b)</li>
-        <li>Palabras()  --- ¿cuántas palabras quieres de mi frase?</li>
-    </ul>
+    <div class="contenedor-principal">
+        <div class="contenedor">
+            <h1>Funciones</h1>
+            <p><strong>Te dejo un texto con las funciones para que uses en consola</strong></p>
+            <ul>
+                <li>suma(a,b)</li>
+                <li>resta(a,b)</li>
+                <li>Palabras()  --- ¿cuántas palabras quieres de mi frase?</li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
